# Qubx

./: .gitignore  CHANGELOG.md  LICENSE  README.md
examples/envelope_test/: Cargo.toml
examples/envelope_test/src/: main.rs
examples/qubx_example/: Cargo.toml
examples/qubx_example/src/: buffers_example.rs  convolution_example.rs  envelopes_example.rs  genesis_example.rs  main.rs  sigenv_example.rs  signals_example.rs  simple_example.rs  spaces_example.rs
examples/signals_test/: Cargo.toml
examples/signals_test/src/: main.rs
examples/simple_test/: Cargo.toml
examples/simple_test/src/: main.rs
qubx/: Cargo.toml  build.rs
qubx/src/: check_list.rs  lib.rs  qlist.rs  qubx.rs  qubx_common.rs  qubx_components.rs  qubx_pmanage.rs  qubx_types.rs
qubx/src/qmod/: macros.rs  qanalysis.rs  qbuffers.rs  qenvelopes.rs  qfilters.rs  qgenesis.rs  qinterp.rs  qoperations.rs  qsignals.rs  qspaces.rs  qspectra.rs  qtable.rs  qwindow.rs  shared_tools.rs
qubx/src/qmod/convolution/: qconvolution.rs
qubx/src/qmod/envelopes/: qenvelopes.rs
qubx/src/qmod/filters/: biquadeq.rs  butter.rs  coeffstruct.rs  dc.rs  filtertype.rs  harmonic.rs  mod.rs  narrow.rs  onepole.rs  twozerotwopole.rs  zavalishin.rs
qubx/src/qmod/genesis/: fap_modulation.rs  genesis_params.rs  granulation.rs  mod.rs
qubx/src/qmod/interp/: qinterp.rs
qubx/src/qmod/signals/: qsignal_tools.rs  qsignals.rs
